chore(repo): clean legacy assets; align with forge-only WASM source
- Remove obsolete build/scripts and local artifacts (scripts/, wrappers/, release_assets/, tmp files)
- Add robust .gitignore for local_tools/, lockfiles, editors, bundler caches
- Keep play core only: loader (3.3.7), minimal API, tests, types (337)
- README: add Roadmap policy to use mujoco-wasm-forge as sole WASM build source
- Track tsconfig, tests and loader; keep local-only docs ignored (AGENTS.md, DEV_PLAN_LOCAL.md)

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,29 @@ local/
 FORGE_NOTES.local.md
 FORGE_REFERENCE.md
 AGENTS.md
+DEV_PLAN_LOCAL.md
 tmp_*
+
+# Local tools and artifacts
+local_tools/
+release_assets/
+
+# Legacy/experimental (not part of canonical play)
+scripts/
+wrappers/
+FORGE_*.md
+
+# Package manager lock (keep local-only)
+package-lock.json
+
+# Editors and OS
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# TypeScript and bundlers
+*.tsbuildinfo
+.cache/
+.vite/
+.parcel-cache/
