Switch default model to Rajagopal and untrack RKOB demos

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ scripts/
 wrappers/
 FORGE_*.md
 
+# Large local models (keep untracked)
+dev/RKOB_simplified_upper_with_marker_CAMS.xml
+
 # Package manager lock (keep root local-only)
 /package-lock.json
 
